# SocketsWithGrok

./: CMakeLists.txt  CMakePresets.json  FolderInfo.txt  LICENSE  README.md
Client/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
Include/: BasicSocketFactory.h  Buffer.h  Command.h  ConfigReader.h  DiskFile.h  Error.h  ISocket.h  IpAddress.h  List.h  Logger.h  Message.h  RoleID.h  Serializable.h  SocketListener.h
Platforms.old/Unix/: Socket.cpp  Socket.h  SocketFactory.cpp  SocketFactory.h
Platforms.old/Windows/: Socket.cpp  Socket.h  SocketFactory.cpp  SocketFactory.h  WinsockInitializer.cpp  WinsockInitializer.h
Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
Server/Modules/: FileModule.h  FileModules.cpp  HelloModule.cpp  HelloModule.h  Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h  ProcessModule.cpp  ProcessModule.h
Source/: Buffer.cpp  CMakeLists.txt  Command.cpp  ConfigReader.cpp  DiskFile.cpp  Error.cpp  IpAddress.cpp  Logger.cpp  Message.cpp  SocketListener.cpp
